syntax = "proto3";

package yuloh.math;

option php_generic_services = true;

service Calculadora {
    rpc add (AdicaoRequest) returns (AdicaoReply) {}
    rpc Subtracao (SubtracaoRequest) returns (SubtracaoReply) {}
}

message AdicaoRequest {
    int32 x = 1;
    int32 y = 2;
}

message AdicaoReply {
    int32 sum = 1;
}

message SubtracaoRequest {
    int32 x = 1;
    int32 y = 2;
}

message SubtracaoReply {
    int32 diff = 1;
}
